spacing beween verses fixed

--- a/ui_src/scss/style.scss
+++ b/ui_src/scss/style.scss
@@ -161,3 +161,4 @@ div.tabs a:focus, .active {background-color: #ccc; color: rgba(11,130,255,1);}
 div .mdl-textfield__label:after {
   background: #05aaf4
   }
+body {line-height: inherit !important;}
